Opened 4 years ago

Closed 4 years ago

#16856 closed bug (fixed)

XHCI: Smap violation

Reported by: nephele Owned by: waddlesplash
Priority: normal Milestone: R1/beta3
Component: Drivers/USB/XHCI Version: R1/beta2
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by nephele)

hrev54979+1

This happened after plugging in a Nektar Impact GX61 into my monitor, which is a usb hub that is connected to the back of my motherboard.

The port on the mainboard that the monitor is connected to isn't blue, but it's potentially the same xhci controller anyway. The board has a A520 chipset

I pressed a couple of keys, the KDL happened as soon as i started MidiPlayer (Also managed to reproduce this by starting MidiPlayer first, plugging it in and then pressing any key on the keyboard)

kdl

Attachments (1)

D35C36B5-F121-473B-8779-69C7E6051638.jpeg (409.5 KB ) - added by nephele 4 years ago.
kdl

Download all attachments as: .zip

Change History (8)

by nephele, 4 years ago

kdl

comment:1 by waddlesplash, 4 years ago

Probably the usb_midi driver is somehow passing user-mapped buffers that have kernel addresses.

comment:2 by nephele, 4 years ago

Description: modified (diff)

comment:3 by nephele, 4 years ago

I forgot to add that i had tested this specific keyboard on another device (a laptop) and the KDL didn't occur there with the usb2 ports

comment:4 by waddlesplash, 4 years ago

SMAP is only supported on Broadwell and up on Intel devices, if I recall correctly, and only enabled on x86_64 so it is more than probable that the other device is not using SMAP.

in reply to:  5 comment:6 by nephele, 4 years ago

Replying to pulkomandy:

Can you try https://review.haiku-os.org/c/haiku/+/3806 ?

The review fixes the issue for me, tested on hrev55005 (as hrev55006+3, but with the latest commit reverted as it broke the haikudepot build for me)

comment:7 by korli, 4 years ago

Milestone: UnscheduledR1/beta3
Resolution: fixed
Status: newclosed

Applied in hrev55009

Note: See TracTickets for help on using tickets.