usb_midi: make buffers kernel-only for SMAP

also use user_memcpy in usb_midi_write().
confirmed that it fixes #16856, thanks nephele.

Change-Id: I548cd2bd5cf44f7da078745fe403cf131c4cc4b0
Reviewed-on: https://review.haiku-os.org/c/haiku/+/3806
Reviewed-by: Jérôme Duval <jerome.duval@gmail.com>